# CodeAssist

./: .#config.toml  .dockerignore  .gitignore  DESIGN.md  Dockerfile  PROGRESS.md  README.md  add_numbers.py  agent.py  agents.py  cli.py  config.docker.toml  config.example.toml  config.py  config.toml  custom_tools_loader.py  docker-compose.yml  docker-entrypoint.sh  dynamic_tools.py  embeddings.py  knowledge.py  llm.py  lsp_client.py  mcp_client.py  plugins.py  prompts.py  pyproject.toml  requirements.txt  run_tests.sh  server.py  session.py  session_hook.py  session_manager.py  skills.py  test_api.py  test_knowledge_base.py  test_migration.py  test_self_creation.py  tokens.py
.codeassist/custom_tools/: README.md
.codeassist/skills/: clean.md  code-review.md  convert.md  debug.md  document.md  explain.md  generate.md  imagegen.md  lint.md  migrate.md  music.md  optimize.md  refactor.md  security.md  test-generation.md  test.md
docs/: knowledge-base-quickref.md  knowledge-base-schema.md
sql/: fts5_tables.sql
static/: app.js  index.html  kb.css  kb.html  kb.js  style.css  tools.css  tools.html  tools.js
tests/: README.md  conftest.py  test_agents.py  test_config.py  test_dynamic_tools.py  test_session.py  test_session_manager.py  test_skills.py
tests/test_tools/: test_apply_patch.py  (+8 more)
tools/: __init__.py  advanced.py  apply_patch.py  create_skill.py  create_tool.py  database.py  directory.py  documentation.py  edit.py  fossil.py  git.py  glob.py  grep.py  http.py  process.py  read.py  security.py  shell.py  todo.py  tool_manager.py  webfetch.py  write.py
(+2 files in other folders)
